tests/cargo-ui/unstable-attr/unstable_reachable/expected
error: Use of unstable feature `always_fails`: do not enable\
|\
note: the function `defs::always_fails` is unstable:\
lib.rs\
|\
| pub fn always_fails() {\
| ^^^^^^^^^^^^^^^^^^^^^\
= note: see issue <link> for more information\
= help: use `-Z always_fails` to enable using this function.
